Fix overflowing <code> tags

--- a/client/sass/irc.sass
+++ b/client/sass/irc.sass
@@ -105,6 +105,7 @@ code
   font-size: 14px
   border: 1px solid #e1e1e8
   background-color: #f7f7f9
+  white-space: pre-line
 
 .btn-primary
   background-color: $peter-river
